# MicroVcpuDispatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
examples/: hello.py  simple_flow.py  workflow.yaml
scripts/: gen_example_data.py  run_workflow.py
src/flowq/: __init__.py  cli.py  config.py  models.py  runner.py  utils.py  worker.py
src/flowq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/flowq/dispatchers/: __init__.py  aws.py  base.py  local.py
src/flowq/executors/: __init__.py  aws_lambda.py  ecs.py  local.py  stepfunctions.py
src/flowq/queues/: __init__.py  base.py  file.py  memory.py  sqs.py
src/workflow_orchestrator/: __init__.py  cli.py  config.py  registry.py  runner.py
src/workflow_orchestrator/dispatcher/: app.py
src/workflow_orchestrator/executors/: aws.py  local.py
src/workflow_orchestrator/monitoring/: aws_metrics.py
src/workflow_orchestrator/tasks/: core.py
tests/: test_config_and_runner.py  test_dispatcher_metrics.py  test_flowq.py
