[tool.poetry]
name = "workflow-orchestrator"
version = "0.1.0"
description = "Python Workflow Orchestration Framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "workflow_orchestrator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.114.0"
uvicorn = {version = "0.30.5", extras=["standard"]}
pydantic = "2.8.2"
PyYAML = "6.0.2"
streamlit = "1.37.1"
pandas = "2.2.3"
pyarrow = "20.0.0"
s3fs = "2024.6.0"
boto3 = "1.34.162"
scikit-learn = "1.5.2"
requests = "2.32.3"
tenacity = "8.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
httpx = "0.27.2"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.poetry.scripts]
run-workflow = "workflow_orchestrator.cli:run_workflow_cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
