[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "flowq"
version = "0.1.0"
description = "Queue and dispatch tasks/flows to AWS (ECS, Lambda, Step Functions) with local testing."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.5.0",
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
aws = [
  "boto3>=1.34.0",
]

[project.scripts]
flowq = "flowq.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flowq"]

