[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowq"
version = "0.1.0"
description = "Queue and dispatch Python tasks/flows (DAGs) locally or to AWS."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.4.0"]

[project.scripts]
flowq = "flowq.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

